; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_mfield.c_MenuField_Key.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_mfield.c_MenuField_Key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@K_CHAR_FLAG = common dso_local global i32 0, align 4
@QMF_UPPERCASE = common dso_local global i32 0, align 4
@QMF_LOWERCASE = common dso_local global i32 0, align 4
@QMF_NUMBERSONLY = common dso_local global i32 0, align 4
@menu_buzz_sound = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MenuField_Key(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %13 [
    i32 131, label %10
    i32 137, label %10
    i32 136, label %10
    i32 135, label %10
    i32 134, label %10
    i32 133, label %10
    i32 129, label %12
    i32 132, label %12
    i32 138, label %12
    i32 130, label %12
    i32 128, label %12
  ]

10:                                               ; preds = %2, %2, %2, %2, %2, %2
  %11 = load i32*, i32** %5, align 8
  store i32 129, i32* %11, align 4
  br label %79

12:                                               ; preds = %2, %2, %2, %2, %2
  br label %79

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @K_CHAR_FLAG, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %73

18:                                               ; preds = %13
  %19 = load i32, i32* @K_CHAR_FLAG, align 4
  %20 = xor i32 %19, -1
  %21 = load i32, i32* %6, align 4
  %22 = and i32 %21, %20
  store i32 %22, i32* %6, align 4
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 1
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @QMF_UPPERCASE, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %37

30:                                               ; preds = %18
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @Q_islower(i32 %31)
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %30
  %35 = load i32, i32* %6, align 4
  %36 = sub nsw i32 %35, 32
  store i32 %36, i32* %6, align 4
  br label %68

37:                                               ; preds = %30, %18
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 1
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* @QMF_LOWERCASE, align 4
  %43 = and i32 %41, %42
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %52

45:                                               ; preds = %37
  %46 = load i32, i32* %6, align 4
  %47 = call i32 @Q_isupper(i32 %46)
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %52

49:                                               ; preds = %45
  %50 = load i32, i32* %6, align 4
  %51 = sub nsw i32 %50, -32
  store i32 %51, i32* %6, align 4
  br label %67

52:                                               ; preds = %45, %37
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i32 0, i32 1
  %55 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %54, i32 0, i32 0
  %56 = load i32, i32* %55, align 4
  %57 = load i32, i32* @QMF_NUMBERSONLY, align 4
  %58 = and i32 %56, %57
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %66

60:                                               ; preds = %52
  %61 = load i32, i32* %6, align 4
  %62 = call i32 @Q_isalpha(i32 %61)
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %64, label %66

64:                                               ; preds = %60
  %65 = load i32, i32* @menu_buzz_sound, align 4
  store i32 %65, i32* %3, align 4
  br label %80

66:                                               ; preds = %60, %52
  br label %67

67:                                               ; preds = %66, %49
  br label %68

68:                                               ; preds = %67, %34
  %69 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %70 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %69, i32 0, i32 0
  %71 = load i32, i32* %6, align 4
  %72 = call i32 @MField_CharEvent(i32* %70, i32 %71)
  br label %78

73:                                               ; preds = %13
  %74 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %75 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %74, i32 0, i32 0
  %76 = load i32, i32* %6, align 4
  %77 = call i32 @MField_KeyDownEvent(i32* %75, i32 %76)
  br label %78

78:                                               ; preds = %73, %68
  br label %79

79:                                               ; preds = %78, %12, %10
  store i32 0, i32* %3, align 4
  br label %80

80:                                               ; preds = %79, %64
  %81 = load i32, i32* %3, align 4
  ret i32 %81
}

declare dso_local i32 @Q_islower(i32) #1

declare dso_local i32 @Q_isupper(i32) #1

declare dso_local i32 @Q_isalpha(i32) #1

declare dso_local i32 @MField_CharEvent(i32*, i32) #1

declare dso_local i32 @MField_KeyDownEvent(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
